TP01/log
Warning.java:9: warning: [finally] finally clause cannot complete normally
        }
        ^
1 warning
--------------------------------------------------------------------------------------------------
NoCompile.java:2: error: <identifier> expected
    gvyvevrbjh
              ^
1 error
--------------------------------------------------------------------------------------------------
--------------------------------------------------------------------------------------------------
Début de la vérification...
[ERROR] /home/gutierrez/FRED/FRED/TP01/compiler.java:27: La ligne excède 100 caractères (trouvé 126). [LineLength]
[ERROR] /home/gutierrez/FRED/FRED/TP01/compiler.java:43: La ligne excède 100 caractères (trouvé 126). [LineLength]
[ERROR] /home/gutierrez/FRED/FRED/TP01/compiler.java:51: La ligne excède 100 caractères (trouvé 207). [LineLength]
[ERROR] /home/gutierrez/FRED/FRED/TP01/compiler.java:52: La ligne excède 100 caractères (trouvé 106). [LineLength]
[ERROR] /home/gutierrez/FRED/FRED/TP01/compiler.java:52:22: Le nom 'RunCheckStyle' n'est pas conforme à l'expression '^[a-z][a-zA-Z0-9]*$'. [LocalVariableName]
Vérification terminée.
--------------------------------------------------------------------------------------------------
JUnit version 4.5
.E........
Time: 0,01
There was 1 failure:
1) testInitialisation(PointTest)
java.lang.AssertionError: 
	at org.junit.Assert.fail(Assert.java:91)
	at org.junit.Assert.assertTrue(Assert.java:43)
	at org.junit.Assert.assertTrue(Assert.java:54)
	at PointTest.testInitialisation(PointTest.java:27)
	at java.base/jdk.internal.reflect.DirectMethodHandleAccessor.invoke(DirectMethodHandleAccessor.java:103)
	at java.base/java.lang.reflect.Method.invoke(Method.java:580)
	at org.junit.runners.model.FrameworkMethod$1.runReflectiveCall(FrameworkMethod.java:44)
	at org.junit.internal.runners.model.ReflectiveCallable.run(ReflectiveCallable.java:15)
	at org.junit.runners.model.FrameworkMethod.invokeExplosively(FrameworkMethod.java:41)
	at org.junit.internal.runners.statements.InvokeMethod.evaluate(InvokeMethod.java:20)
	at org.junit.internal.runners.statements.RunBefores.evaluate(RunBefores.java:28)
	at org.junit.internal.runners.statements.RunAfters.evaluate(RunAfters.java:31)
	at org.junit.runners.BlockJUnit4ClassRunner.runChild(BlockJUnit4ClassRunner.java:73)
	at org.junit.runners.BlockJUnit4ClassRunner.runChild(BlockJUnit4ClassRunner.java:46)
	at org.junit.runners.ParentRunner.runChildren(ParentRunner.java:180)
	at org.junit.runners.ParentRunner.access$000(ParentRunner.java:41)
	at org.junit.runners.ParentRunner$1.evaluate(ParentRunner.java:173)
	at org.junit.internal.runners.statements.RunBefores.evaluate(RunBefores.java:28)
	at org.junit.internal.runners.statements.RunAfters.evaluate(RunAfters.java:31)
	at org.junit.runners.ParentRunner.run(ParentRunner.java:220)
	at org.junit.runners.Suite.runChild(Suite.java:115)
	at org.junit.runners.Suite.runChild(Suite.java:23)
	at org.junit.runners.ParentRunner.runChildren(ParentRunner.java:180)
	at org.junit.runners.ParentRunner.access$000(ParentRunner.java:41)
	at org.junit.runners.ParentRunner$1.evaluate(ParentRunner.java:173)
	at org.junit.internal.runners.statements.RunBefores.evaluate(RunBefores.java:28)
	at org.junit.internal.runners.statements.RunAfters.evaluate(RunAfters.java:31)
	at org.junit.runners.ParentRunner.run(ParentRunner.java:220)
	at org.junit.runner.JUnitCore.run(JUnitCore.java:137)
	at org.junit.runner.JUnitCore.run(JUnitCore.java:116)
	at org.junit.runner.JUnitCore.run(JUnitCore.java:107)
	at org.junit.runner.JUnitCore.runMain(JUnitCore.java:88)
	at org.junit.runner.JUnitCore.runMainAndExit(JUnitCore.java:54)
	at org.junit.runner.JUnitCore.main(JUnitCore.java:46)
	at PointTest.main(PointTest.java:100)
	at java.base/jdk.internal.reflect.DirectMethodHandleAccessor.invoke(DirectMethodHandleAccessor.java:103)
	at java.base/java.lang.reflect.Method.invoke(Method.java:580)
	at jdk.compiler/com.sun.tools.javac.launcher.SourceLauncher.execute(SourceLauncher.java:268)
	at jdk.compiler/com.sun.tools.javac.launcher.SourceLauncher.run(SourceLauncher.java:153)
	at jdk.compiler/com.sun.tools.javac.launcher.SourceLauncher.main(SourceLauncher.java:78)

FAILURES!!!
Tests run: 9,  Failures: 1

--------------------------------------------------------------------------------------------------
